@@ -52,6 +52,19 @@ shoes = 0
 socks = 0
 pet = 0
 
+[equip_dem]
+head = 0
+face = 0
+chestacce = 0
+tops = 0
+bottoms = 0
+backpack = 0
+right = 0
+left = 0
+shoes = 0
+socks = 0
+pet = 0
+
 [sort]
 item = 3,4,1,5,2
 warehouse = 
